--- a/styles/footerStyle.css
+++ b/styles/footerStyle.css
@@ -89,7 +89,7 @@
 	flex-flow: row wrap;
 }
 .nav__ul li{
-  width: auto;
+  width: 50%;
 }
 
 .footer__nav > * {
@@ -153,9 +153,9 @@
   }
 }
 
-.nav__ul li  :hover{
-  transition: 0.3s;
-  font-size: 20px ;
+.nav__ul li:hover{
+
+  transform: scale(1.05);
 }
 .nav__ul .twitter :hover{
 color: cyan;
