--- a/styles/tabStyle.css
+++ b/styles/tabStyle.css
@@ -89,7 +89,7 @@
   position: absolute;
   top: 150px;
   left: -1.8%;
-  z-index: 100;
+  z-index: 2;
   text-shadow: 0 1rem 4rem rgba(0, 0, 0, 0.4);
 }
 
